--- a/CSS/Grid/use-grid.html
+++ b/CSS/Grid/use-grid.html
@@ -77,7 +77,7 @@
         <nav>
           <ul>
             <li><a href="#">Main page</a></li>
-            <li><a href="#">Article</a></li>
+            <li><a href="#">Article123</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
           </ul>
