--- a/CSS/HTML and CSS task 1/index.html
+++ b/CSS/HTML and CSS task 1/index.html
@@ -52,7 +52,7 @@
         <div class="collections">
           <div class="collection-item-outer">
             <div class="collection-item">
-              <img src="images/profile.jpg" alt="kek" width="300" />
+              <img src="images/profile.jpg" alt="kek" />
               <div class="collection-text">
                 <h3>List element item</h3>
                 <p>
@@ -68,7 +68,7 @@
           </div>
           <div class="collection-item-outer">
             <div class="collection-item">
-              <img src="images/profile.jpg" alt="kek" width="300" />
+              <img src="images/profile.jpg" alt="kek" />
               <div class="collection-text">
                 <h3>List element item</h3>
                 <p>
@@ -84,7 +84,7 @@
           </div>
           <div class="collection-item-outer">
             <div class="collection-item">
-              <img src="images/profile.jpg" alt="kek" width="300" />
+              <img src="images/profile.jpg" alt="kek" />
               <div class="collection-text">
                 <h3>List element item</h3>
                 <p>
@@ -109,22 +109,67 @@
               <video controls>
                 <source src="video/movie.mp4" type="video/mp4" />
               </video>
+              <div class="collection-text">
+                <h3>List element item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloribus iure fugiat provident! Repellat saepe explicabo
+                  earum vel possimus enim. Temporibus accusantium officia
+                  corrupti laboriosam accusamus aut vitae iusto corporis
+                  eligendi!
+                </p>
+                <button>Read more...</button>
+              </div>
             </div>
-
-            <h3>List element item</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-              iure fugiat provident! Repellat saepe explicabo earum vel possimus
-              enim. Temporibus accusantium officia corrupti laboriosam accusamus
-              aut vitae iusto corporis eligendi!
-            </p>
-            <button>Read more...</button>
+          </div>
+          <div class="collection-item-outer">
+            <div class="collection-item">
+              <video controls>
+                <source src="video/movie.mp4" type="video/mp4" />
+              </video>
+              <div class="collection-text">
+                <h3>List element item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloribus iure fugiat provident! Repellat saepe explicabo
+                  earum vel possimus enim. Temporibus accusantium officia
+                  corrupti laboriosam accusamus aut vitae iusto corporis
+                  eligendi!
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
+          </div>
+          <div class="collection-item-outer">
+            <div class="collection-item">
+              <video controls>
+                <source src="video/movie.mp4" type="video/mp4" />
+              </video>
+              <div class="collection-text">
+                <h3>List element item</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Doloribus iure fugiat provident! Repellat saepe explicabo
+                  earum vel possimus enim. Temporibus accusantium officia
+                  corrupti laboriosam accusamus aut vitae iusto corporis
+                  eligendi!
+                </p>
+                <button>Read more...</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </main>
-    <footer>
-      <div><p>Copiright</p></div>
+    <footer class="footer">
+      <div class="container">
+        <p>Copiright <a href="#" target="_blank">staslowok.ua</a></p>
+        <ol>
+          <li>kek</li>
+          <li>ukek</li>
+          <li>ukekukek</li>
+        </ol>
+      </div>
     </footer>
   </body>
 </html>
