--- a/CSS/HTML and CSS task 1/index.html
+++ b/CSS/HTML and CSS task 1/index.html
@@ -26,16 +26,11 @@
         <!-- LOGIN FORM -->
         <form action="#" class="login">
           <label for="user_name"></label>
-          <input
-            type="text"
-            name="user_name"
-            id="user_name"
-            placeholder="Login"
-            required
-          />
+          <input type="text" name="user_name" id="user_name" required />
           <input
             type="password"
             name="user_password"
+            value=""
             id="user_password"
             placeholder="Password"
             required
@@ -60,9 +55,12 @@
                   Doloribus iure fugiat provident! Repellat saepe explicabo
                   earum vel possimus enim. Temporibus accusantium officia
                   corrupti laboriosam accusamus aut vitae iusto corporis
-                  eligendi!
+                  eligendi iure fugiat provident! Repellat saepe explicabo iure
+                  fugiat provident! Repellat saepe explicabo iure fugiat
+                  provident! Repellat saepe explicabo iure fugiat provident!
+                  Repellat saepe explicabo!
                 </p>
-                <button>Read more...</button>
+                <button onclick="showText(this)">Read more...</button>
               </div>
             </div>
           </div>
@@ -76,9 +74,12 @@
                   Doloribus iure fugiat provident! Repellat saepe explicabo
                   earum vel possimus enim. Temporibus accusantium officia
                   corrupti laboriosam accusamus aut vitae iusto corporis
-                  eligendi!
+                  eligendi iure fugiat provident! Repellat saepe explicabo iure
+                  fugiat provident! Repellat saepe explicabo iure fugiat
+                  provident! Repellat saepe explicabo iure fugiat provident!
+                  Repellat saepe explicabo!
                 </p>
-                <button>Read more...</button>
+                <button onclick="showText(this)">Read more...</button>
               </div>
             </div>
           </div>
@@ -92,9 +93,12 @@
                   Doloribus iure fugiat provident! Repellat saepe explicabo
                   earum vel possimus enim. Temporibus accusantium officia
                   corrupti laboriosam accusamus aut vitae iusto corporis
-                  eligendi!
+                  eligendi iure fugiat provident! Repellat saepe explicabo iure
+                  fugiat provident! Repellat saepe explicabo iure fugiat
+                  provident! Repellat saepe explicabo iure fugiat provident!
+                  Repellat saepe explicabo!
                 </p>
-                <button>Read more...</button>
+                <button onclick="showText(this)">Read more...</button>
               </div>
             </div>
           </div>
@@ -172,4 +176,5 @@
       </div>
     </footer>
   </body>
+  <script src="js.js"></script>
 </html>
